ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resources
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    #- host: host1.domain.ext
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/nodejs"
            backend:
              service:
                name: nodejs
                port:
                  number: 3000
